--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             Calculator Damage<br><br>
             <center><sub> in</sub><strong>Valorant</strong></center>
         </div>
-        <div class="human row">
-            <div class="col human-el human-head">
-                <span class="label-human label-head"></span>
+        <div class="human col">
+            <div class="row human-el human-head">
+                <span class="label-human label-head justify-content-center"></span>
             </div>
-            <div class="col human-el human-body">
-                <span class="label-human label-body"></span>
+            <div class="row human-el human-body">
+                <span class="label-human label-body justify-content-center"></span>
             </div>
-            <div class="col human-el human-leg">
-                <span class="label-human label-leg"></span>
+            <div class="row human-el human-leg">
+                <span class="label-human label-leg justify-content-center"></span>
             </div>
         </div>
         <div class="form">
