Beter human , menu and RWD

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 <body>
     <div class="cointainer">
         <div class="label">
-            Calculator Damage<br><br>
-            <center><sub> in</sub><strong>Valorant</strong></center>
+            Calculator Damage
+            <sub><sub> in</sub><strong class="strong-valorant">Valorant</strong></sub>
         </div>
-        <div class="human col">
-            <div class="row human-el human-head">
-                <span class="label-human label-head justify-content-center"></span>
+        <div class="human">
+            <div class=" human-el human-head">
+                <div class="label-human label-head "></div>
             </div>
-            <div class="row human-el human-body">
-                <span class="label-human label-body justify-content-center"></span>
+            <div class="human-el human-body">
+                <div class="label-human label-body "></div>
             </div>
-            <div class="row human-el human-leg">
-                <span class="label-human label-leg justify-content-center"></span>
+            <div class="human-el human-leg">
+                <div class="label-human label-leg "></div>
             </div>
         </div>
         <div class="form">
