--- a/index.html
+++ b/index.html
@@ -34,58 +34,43 @@
             <ol>
                 <li class="li-pistol"><a class="a-pistol">Pistol</a>
                     <ul>
-                        <li class="classicAt">Classic(at 30m)</li>
-                        <li class="classicOver">Classic(over 30m) </li>
-                        <li>Shorty(at 9m) </li>
-                        <li>Shorty(10-15m) </li>
-                        <li>Frenzy(at 20m) </li>
-                        <li>Frenzy(over 20m) </li>
-                        <li>Ghost(at 30m) </li>
-                        <li>Ghost(over 30m) </li>
-                        <li>Sheriff(at 30m) </li>
-                        <li>Sheriff(over 30m) </li>
+                        <li class="classic">Classic</li>
+                        <li class="shorty">Shorty</li>
+                        <li class="frenzy">Frenzy </li>
+                        <li class="gost">Ghost </li>
+                        <li class="sheriff">Sheriff </li>
                     </ul>
                 </li>
                 <li class="li-pm"><a class="a-pm">PM</a>
                     <ul>
-                        <li>Stinger(at 20m) </li>
-                        <li>Stinger(over 20m) </li>
-                        <li>Spectre(at 20m) </li>
-                        <li>Spectre(over 20m) </li>
+                        <li class="stinger">Stinger </li>
+                        <li class="spectre">Spectre </li>
                     </ul>
                 </li>
                 <li class="li-rifle"><a class="a-rifle">Rifle</a>
                     <ul>
-                        <li>Bulldog</li>
-                        <li>Guardian</li>
-                        <li>Phantom(0-15m) </li>
-                        <li>Phantom(16-30m) </li>
-                        <li>Phantom(31-50m) </li>
-                        <li>Vandal</li>
+                        <li class="bulldog">Bulldog</li>
+                        <li class="guardian">Guardian</li>
+                        <li class="phantom">Phantom </li>
+                        <li class="vandal">Vandal</li>
                     </ul>
                 </li>
                 <li class="li-sniper"><a class="a-sniper">Sniper</a>
                     <ul>
-                        <li>Marshal</li>
-                        <li>Operator</li>
+                        <li class="marshal">Marshal</li>
+                        <li class="operator">Operator</li>
                     </ul>
                 </li>
                 <li class="li-schothun"><a class="a-schothun">Shotgun</a>
                     <ul>
-                        <li>Bucky(0-8m)</li>
-                        <li>Bucky(8-12 m)</li>
-                        <li>Bucky(12-50m)</li>
-                        <li>Judge(0-10m)</li>
-                        <li>Judge(10-15 m)</li>
-                        <li>Judge(15-50m)</li>
+                        <li class="bucky">Bucky</li>
+                        <li class="judge">Judge</li>
                     </ul>
                 </li>
                 <li class="li-heavy"><a class="a-heavy">Heavy</a>
                     <ul>
-                        <li>Ares(at 30m) </li>
-                        <li>Ares(above 30m) </li>
-                        <li>Odin(at 30m) </li>
-                        <li>Odin(above 30m) </li>
+                        <li class="ares">Ares </li>
+                        <li class="odin">Odin </li>
                     </ul>
                 </li>
             </ol>
@@ -97,5 +82,4 @@
 </html>
 <!--
         https://www.pcgamer.com/valorant-guns-damage-recoil-guide/
-        https://webkod.pl/kurs-css/lekcje/dzial-4/rozwijane-poziome-menu-css#
     -->
