--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icon.ico" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Damage Valorant</title>
 </head>
@@ -34,43 +29,43 @@
             <ol>
                 <li class="li-pistol"><a class="a-pistol">Pistol</a>
                     <ul>
-                        <li class="classic">Classic</li>
-                        <li class="shorty">Shorty</li>
-                        <li class="frenzy">Frenzy </li>
-                        <li class="gost">Ghost </li>
-                        <li class="sheriff">Sheriff </li>
+                        <li class="classic guns" data-row="0">Classic</li>
+                        <li class="shorty guns" data-row="1">Shorty</li>
+                        <li class="frenzy guns" data-row="2">Frenzy </li>
+                        <li class="ghost guns" data-row="3">Ghost </li>
+                        <li class="sheriff guns" data-row="4">Sheriff </li>
                     </ul>
                 </li>
                 <li class="li-pm"><a class="a-pm">PM</a>
                     <ul>
-                        <li class="stinger">Stinger </li>
-                        <li class="spectre">Spectre </li>
+                        <li class="stinger guns" data-row="5">Stinger </li>
+                        <li class="spectre guns" data-row="6">Spectre </li>
                     </ul>
                 </li>
                 <li class="li-rifle"><a class="a-rifle">Rifle</a>
                     <ul>
-                        <li class="bulldog">Bulldog</li>
-                        <li class="guardian">Guardian</li>
-                        <li class="phantom">Phantom </li>
-                        <li class="vandal">Vandal</li>
+                        <li class="bulldog guns" data-row="7">Bulldog</li>
+                        <li class="guardian guns" data-row="8">Guardian</li>
+                        <li class="phantom guns" data-row="9">Phantom </li>
+                        <li class="vandal guns" data-row="10">Vandal</li>
                     </ul>
                 </li>
                 <li class="li-sniper"><a class="a-sniper">Sniper</a>
                     <ul>
-                        <li class="marshal">Marshal</li>
-                        <li class="operator">Operator</li>
+                        <li class="marshal guns" data-row="11">Marshal</li>
+                        <li class="operator guns" data-row="12">Operator</li>
                     </ul>
                 </li>
                 <li class="li-schothun"><a class="a-schothun">Shotgun</a>
                     <ul>
-                        <li class="bucky">Bucky</li>
-                        <li class="judge">Judge</li>
+                        <li class="bucky guns" data-row="13">Bucky</li>
+                        <li class="judge guns" data-row="14">Judge</li>
                     </ul>
                 </li>
                 <li class="li-heavy"><a class="a-heavy">Heavy</a>
                     <ul>
-                        <li class="ares">Ares </li>
-                        <li class="odin">Odin </li>
+                        <li class="ares guns" data-row="15">Ares </li>
+                        <li class="odin guns" data-row="16">Odin </li>
                     </ul>
                 </li>
             </ol>
