--- a/index.html
+++ b/index.html
@@ -29,43 +29,43 @@
             <ol>
                 <li class="li-pistol"><a class="a-pistol">Pistol</a>
                     <ul>
-                        <li class="classic guns" data-row="0">Classic</li>
-                        <li class="shorty guns" data-row="1">Shorty</li>
-                        <li class="frenzy guns" data-row="2">Frenzy </li>
-                        <li class="ghost guns" data-row="3">Ghost </li>
-                        <li class="sheriff guns" data-row="4">Sheriff </li>
+                        <li class="classic guns">Classic</li>
+                        <li class="shorty guns">Shorty</li>
+                        <li class="frenzy guns">Frenzy </li>
+                        <li class="ghost guns">Ghost </li>
+                        <li class="sheriff guns">Sheriff </li>
                     </ul>
                 </li>
                 <li class="li-pm"><a class="a-pm">PM</a>
                     <ul>
-                        <li class="stinger guns" data-row="5">Stinger </li>
-                        <li class="spectre guns" data-row="6">Spectre </li>
+                        <li class="stinger guns">Stinger </li>
+                        <li class="spectre guns">Spectre </li>
                     </ul>
                 </li>
                 <li class="li-rifle"><a class="a-rifle">Rifle</a>
                     <ul>
-                        <li class="bulldog guns" data-row="7">Bulldog</li>
-                        <li class="guardian guns" data-row="8">Guardian</li>
-                        <li class="phantom guns" data-row="9">Phantom </li>
-                        <li class="vandal guns" data-row="10">Vandal</li>
+                        <li class="bulldog guns">Bulldog</li>
+                        <li class="guardian guns">Guardian</li>
+                        <li class="phantom guns">Phantom </li>
+                        <li class="vandal guns">Vandal</li>
                     </ul>
                 </li>
                 <li class="li-sniper"><a class="a-sniper">Sniper</a>
                     <ul>
-                        <li class="marshal guns" data-row="11">Marshal</li>
-                        <li class="operator guns" data-row="12">Operator</li>
+                        <li class="marshal guns">Marshal</li>
+                        <li class="operator guns">Operator</li>
                     </ul>
                 </li>
                 <li class="li-schothun"><a class="a-schothun">Shotgun</a>
                     <ul>
-                        <li class="bucky guns" data-row="13">Bucky</li>
-                        <li class="judge guns" data-row="14">Judge</li>
+                        <li class="bucky guns">Bucky</li>
+                        <li class="judge guns">Judge</li>
                     </ul>
                 </li>
                 <li class="li-heavy"><a class="a-heavy">Heavy</a>
                     <ul>
-                        <li class="ares guns" data-row="15">Ares </li>
-                        <li class="odin guns" data-row="16">Odin </li>
+                        <li class="ares guns">Ares </li>
+                        <li class="odin guns">Odin </li>
                     </ul>
                 </li>
             </ol>
