--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 </li>
             </ol>
         </div>
+        <div class="score"></div>
     </div>
     <script src="script.js"></script>
 </body>
